# 0xtools

./: .gitignore  .gitmodules  0xtools.spec  0xtop  CHANGELOG.md  Makefile  Query-Examples.md  README.md  proc.py  psn  psnapper.spec  pst  release.sh  report.py  schedlat  schedlat.py  syscall_64_2.6.18.h  syscall_64_2.6.32.h  xcapture-restart.timer  xcapture.default  xcapture.service
bash_completion/: psn.bash
experiments/: README.md
experiments/faster-biolatency/: biolatency.bpf.c  biolatency.c  biolatency.h
experiments/faster-biolatency/fio/: allmulti.sh  onessd.sh
experiments/oracle/: README.md  xcapture-bpf  xcapture-bpf.c
experiments/xcapture-v0-proc/: 0xtools.spec  Makefile  xcapture-restart.service
experiments/xcapture-v1-bpftrace/: transform.jq
experiments/xcapture-v2-bcc/: xcapture-bpf  xcapture-bpf.c
include/: syscall_names.h
lib/: proc.py  psnreport.py
lib/0xtools/: argparse.py  proc.py  psnproc.py  psnreport.py
man1/: psn.1
next/: README.md
next/examples/: README.md  duckdb_query.sql  duckdb_query_output_example.txt  xcapture_samples.csv  xcapture_sc_completion.csv
next/src/: Makefile  xcapture.bpf.c  xcapture.c  xcapture.h
next/tools/: xq
next/tools/sql/: sclathist.sql
next/xcapture/include/: syscall_aarch64.h  syscall_names_aarch64.h  syscall_names_x86_64.h  syscall_x86_64.tbl  xcapture.h
next/xcapture/src/filters/: README.md
next/xcapture/src/helpers/: file_helpers.h
next/xcapture/src/maps/: xcapture_maps.h
next/xcapture/src/probes/io/: iorq.bpf.c  iorq.bpf.h
next/xcapture/src/probes/syscall/: syscall.bpf.c  syscall.bpf.h
next/xcapture/src/probes/task/: task.bpf.c
next/xcapture/src/retrievers/: README.md
next/xcapture/src/user/: main.c  task_handler.h  tracking_handler.c
next/xcapture/tests/: test_md5.py
src/: xcapture.c
tools/: README.md
xcapture/: CMakeLists.txt  IDLE_DETERMINATION.md  Makefile  SCHEMA.md  XCAPTURE.md
xcapture/cmake/toolchains/: aarch64-linux-gnu.cmake
xcapture/include/: cgroup_cache.h  columns.h  syscall_aarch64.tbl  syscall_arg1_is_fd.txt  syscall_arm64.h  syscall_fd_bitmap_aarch64.h  syscall_fd_bitmap_x86_64.h  syscall_names_aarch64.h  syscall_names_x86_64.h  syscall_x86_64.h  tcp_stats.h  xcapture.h  xcapture_context.h  xcapture_types.h  xcapture_user.h
xcapture/packaging/etc/: xcapture.conf
xcapture/packaging/scripts/: conffiles  postinst  postrm
xcapture/packaging/systemd/: xcapture.service.in
xcapture/packaging/tmpfiles.d/: xcapture.conf
xcapture/src/helpers/: fd_helpers.h  file_helpers.h  io_helpers.h  tcp_helpers.h  tcp_helpers_simple.h
xcapture/src/maps/: xcapture_maps_common.h  xcapture_maps_iorq_classic.h
xcapture/src/probes/: xcapture_config.h
xcapture/src/probes/io/: iorq_hashmap.bpf.c
xcapture/src/probes/syscall/: syscall.bpf.c  syscall.bpf.h
xcapture/src/probes/task/: task.bpf.c
xcapture/src/user/: cgroup_cache.c  columns.c  iorq_info.c  main.c  output_writer.c  socket_info.c  syscall_info.c  task_handler.c  task_handler.h  tracking_handler.c  tracking_handler.h
xcapture/src/utils/: md5.c  md5.h  xcapture_helpers.h
xcapture/tests/: Makefile  README.md  md5_test.c
xstack/: Makefile  README.md  flam.sh  xintr.bpf.c  xintr.c  xintr.h  xstack.bpf.c  xstack.c  xstack.h
xtop/: README.md  XTOP_SCHEMA.md  xtop  xtop-test.py
xtop/core/: __init__.py  column_utils.py  csv_time_filter.py  data_source.py  formatters.py  heatmap.py  heatmap_visualizer.py  histogram_data_provider.py  histogram_formatter.py  materializer.py  navigation.py  peek_providers.py  performance_optimizer.py  query_builder.py  query_engine.py  time_utils.py  unified_formatter.py  unified_visualizer.py  visualizers.py
xtop/core/display/: __init__.py  formatting.py
xtop/demo/: partitions  xcapture_cgroups_2025-09-05.13.parquet  xcapture_cgroups_2025-09-05.14.parquet  xcapture_iorqend_2025-09-05.13.parquet  xcapture_iorqend_2025-09-05.14.parquet  xcapture_iorqmap_2025-09-05.14.parquet  xcapture_kstacks_2025-09-05.13.csv  xcapture_kstacks_2025-09-05.13.parquet  xcapture_kstacks_2025-09-05.14.csv  xcapture_kstacks_2025-09-05.14.parquet  xcapture_samples_2025-09-05.13.parquet  xcapture_samples_2025-09-05.14.parquet  xcapture_syscend_2025-09-05.13.parquet  xcapture_syscend_2025-09-05.14.parquet  xcapture_ustacks_2025-09-05.13.csv  xcapture_ustacks_2025-09-05.13.parquet  xcapture_ustacks_2025-09-05.14.csv  xcapture_ustacks_2025-09-05.14.parquet
xtop/sql/: fragment_manager.py
xtop/sql/fragments/: base_iorqend.sql  base_kstacks.sql  base_partitions.sql  base_samples.sql  base_syscend.sql  base_ustacks.sql  computed_columns.sql  enriched_samples_cte.sql  get_iorqend.sql  get_kstacks.sql  get_partitions.sql  get_samples.sql  get_syscend.sql  get_ustacks.sql  histogram_aggregation.sql  histogram_buckets.sql
xtop/tests/: README.md  compare_test_outputs.py  run_all_tests.py  run_before_after_tests.py  run_extended_tests.sh  run_tests.sh  run_tui_tests.sh  test_avg_threads.py  test_backspace.py  test_cli_peek.py  test_column_bug.py  test_column_fix.py  test_column_modal_search.py  test_column_selection.py  test_column_visibility.py  test_column_width.py  test_display_utils.py  test_dynamic_grouping.sh  test_extra_info.py  test_filter_display.py  test_fixed_tui.sh  test_heatmap_debug.py  test_modal_enter_key_fix.py  test_modal_event_propagation.py  test_modal_initial_display.py  test_modal_layout.py  test_modal_scroll.py  test_navigation.py  test_peek_functionality.sh  test_peek_provider.py  test_query_builder_schema.py  test_results.json  test_runner.py  test_schema_resilience.py  test_simple_table.py  test_textual_breadcrumb.py  test_textual_init.py  test_time_utils.py  test_timeline.py  test_tui_basic.py  (+9 more)
xtop/tui/: __init__.py  cell_peek_modal.py  cell_peek_modal_old.py  column_selection_modal.py  cursor_manager.py  error_modal.py  histogram_peek_modal_refactored.py  json_viewer_modal.py  stack_peek_modal.py  value_filter_modal.py
